--- a/trunk/TeamBuilder/web/teambuilder.css
+++ b/trunk/TeamBuilder/web/teambuilder.css
@@ -85,3 +85,11 @@ q:before, q:after {
 .txtMember {
   margin: 5px 0px 5px 0px;
 }
+
+.pnlGroupControl {
+  width:100%;
+  height:50px;
+  margin: 5px 5px 5px 5px;
+  background-color: #E1E8FF;
+
+}
